hyper-query-language.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { HQL_Lenguaje: peg$parseHQL_Lenguaje },
      peg$startRuleFunction  = peg$parseHQL_Lenguaje,

      peg$c0 = function(sentencias) { return sentencias.filter(s => s !== null) },
      peg$c1 = "--",
      peg$c2 = peg$literalExpectation("--", false),
      peg$c3 = /^[^\n]/,
      peg$c4 = peg$classExpectation(["\n"], true, false),
      peg$c5 = "\n",
      peg$c6 = peg$literalExpectation("\n", false),
      peg$c7 = function() { return null },
      peg$c8 = "CREATE TABLE",
      peg$c9 = peg$literalExpectation("CREATE TABLE", false),
      peg$c10 = "create table",
      peg$c11 = peg$literalExpectation("create table", false),
      peg$c12 = "IF NOT EXISTS ",
      peg$c13 = peg$literalExpectation("IF NOT EXISTS ", false),
      peg$c14 = "if not exists ",
      peg$c15 = peg$literalExpectation("if not exists ", false),
      peg$c16 = "(",
      peg$c17 = peg$literalExpectation("(", false),
      peg$c18 = ");",
      peg$c19 = peg$literalExpectation(");", false),
      peg$c20 = function(token1, tabla, token2, atributos, token3, composicion, token4) { return { tabla, atributos: atributos ? atributos : [], composicion, script: text() } },
      peg$c21 = function(sentencia1, sentenciaN) { return [].concat([sentencia1]).concat(sentenciaN); },
      peg$c22 = "CONSTRAINT",
      peg$c23 = peg$literalExpectation("CONSTRAINT", false),
      peg$c24 = "UNIQUE",
      peg$c25 = peg$literalExpectation("UNIQUE", false),
      peg$c26 = ")",
      peg$c27 = peg$literalExpectation(")", false),
      peg$c28 = function(token1, token2, token3, columna, token4, token5, token6, columnas_implicadas, token7) { return { sentencia: "restricción única", columna, columnas_implicadas } },
      peg$c29 = function(columna, columnas) { return [].concat([ columna ]).concat(columnas) },
      peg$c30 = ",",
      peg$c31 = peg$literalExpectation(",", false),
      peg$c32 = function(token1, token2, id) { return id },
      peg$c33 = function(token1, columna, token2, tipo, detalles, atributos) { return { sentencia: "columna", columna, tipo, detalles, atributos: atributos ? atributos : [] } },
      peg$c34 = "/*",
      peg$c35 = peg$literalExpectation("/*", false),
      peg$c36 = peg$anyExpectation(),
      peg$c37 = function() { return text().trim() },
      peg$c38 = "*/",
      peg$c39 = peg$literalExpectation("*/", false),
      peg$c40 = function(token1, atributos, token2) { return atributos },
      peg$c41 = function(atributos) { return atributos ? atributos : [] },
      peg$c42 = "@",
      peg$c43 = peg$literalExpectation("@", false),
      peg$c44 = function(token1, hiperatributo, subatributos) { return subatributos ? [hiperatributo, subatributos] : hiperatributo },
      peg$c45 = function() { return text() },
      peg$c46 = function(subatributos) { return subatributos },
      peg$c47 = "-",
      peg$c48 = peg$literalExpectation("-", false),
      peg$c49 = function(texto) { return texto.trim() },
      peg$c50 = "BOOLEAN",
      peg$c51 = peg$literalExpectation("BOOLEAN", false),
      peg$c52 = "boolean",
      peg$c53 = peg$literalExpectation("boolean", false),
      peg$c54 = "INTEGER",
      peg$c55 = peg$literalExpectation("INTEGER", false),
      peg$c56 = "integer",
      peg$c57 = peg$literalExpectation("integer", false),
      peg$c58 = "INT",
      peg$c59 = peg$literalExpectation("INT", false),
      peg$c60 = "int",
      peg$c61 = peg$literalExpectation("int", false),
      peg$c62 = "DECIMAL",
      peg$c63 = peg$literalExpectation("DECIMAL", false),
      peg$c64 = "decimal",
      peg$c65 = peg$literalExpectation("decimal", false),
      peg$c66 = "VARCHAR",
      peg$c67 = peg$literalExpectation("VARCHAR", false),
      peg$c68 = "varchar",
      peg$c69 = peg$literalExpectation("varchar", false),
      peg$c70 = "TEXT",
      peg$c71 = peg$literalExpectation("TEXT", false),
      peg$c72 = "text",
      peg$c73 = peg$literalExpectation("text", false),
      peg$c74 = "DATETIME",
      peg$c75 = peg$literalExpectation("DATETIME", false),
      peg$c76 = "datetime",
      peg$c77 = peg$literalExpectation("datetime", false),
      peg$c78 = "DATE",
      peg$c79 = peg$literalExpectation("DATE", false),
      peg$c80 = "date",
      peg$c81 = peg$literalExpectation("date", false),
      peg$c82 = "TIMESTAMP",
      peg$c83 = peg$literalExpectation("TIMESTAMP", false),
      peg$c84 = "timestamp",
      peg$c85 = peg$literalExpectation("timestamp", false),
      peg$c86 = "TIME",
      peg$c87 = peg$literalExpectation("TIME", false),
      peg$c88 = "time",
      peg$c89 = peg$literalExpectation("time", false),
      peg$c90 = "REAL",
      peg$c91 = peg$literalExpectation("REAL", false),
      peg$c92 = "real",
      peg$c93 = peg$literalExpectation("real", false),
      peg$c94 = "BLOB",
      peg$c95 = peg$literalExpectation("BLOB", false),
      peg$c96 = "blob",
      peg$c97 = peg$literalExpectation("blob", false),
      peg$c98 = "DECIMAL(",
      peg$c99 = peg$literalExpectation("DECIMAL(", false),
      peg$c100 = "decimal(",
      peg$c101 = peg$literalExpectation("decimal(", false),
      peg$c102 = /^[0-9]/,
      peg$c103 = peg$classExpectation([["0", "9"]], false, false),
      peg$c104 = function() {return text() },
      peg$c105 = "PRIMARY KEY",
      peg$c106 = peg$literalExpectation("PRIMARY KEY", false),
      peg$c107 = "primary key",
      peg$c108 = peg$literalExpectation("primary key", false),
      peg$c109 = function(token1, token3, clave_1, clave_n, token4) { return { sentencia: "clave primaria", columnas: [clave_1].concat(clave_n || []) } },
      peg$c110 = "FOREIGN KEY",
      peg$c111 = peg$literalExpectation("FOREIGN KEY", false),
      peg$c112 = "foreign key",
      peg$c113 = peg$literalExpectation("foreign key", false),
      peg$c114 = "REFERENCES",
      peg$c115 = peg$literalExpectation("REFERENCES", false),
      peg$c116 = "references",
      peg$c117 = peg$literalExpectation("references", false),
      peg$c118 = function(token1, columna, token2, tabla_foranea, token3, columna_foranea, token4) { return { sentencia: "clave foránea", columna, tabla_foranea, columna_foranea } },
      peg$c119 = function(token1, sentencia) { return sentencia },
      peg$c120 = /^[A-Za-z_]/,
      peg$c121 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false),
      peg$c122 = /^[A-Za-z0-9_$]/,
      peg$c123 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_", "$"], false, false),
      peg$c124 = function(id) { return id },
      peg$c125 = "\r\n",
      peg$c126 = peg$literalExpectation("\r\n", false),
      peg$c127 = "\r",
      peg$c128 = peg$literalExpectation("\r", false),
      peg$c129 = function() {},
      peg$c130 = "\t",
      peg$c131 = peg$literalExpectation("\t", false),
      peg$c132 = " ",
      peg$c133 = peg$literalExpectation(" ", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseHQL_Lenguaje() {
    var s0;

    s0 = peg$parseHQL_Sentencias();

    return s0;
  }

  function peg$parseHQL_Sentencias() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parse_();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parse_();
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseHQL_Sentencia();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseHQL_Sentencia();
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parse_();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parse_();
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseHQL_Sentencia() {
    var s0;

    s0 = peg$parseHQL_Sentencia_CREATE_TABLE();
    if (s0 === peg$FAILED) {
      s0 = peg$parseHQL_Sentencia_Comentario_unilinea();
    }

    return s0;
  }

  function peg$parseHQL_Sentencia_Comentario_unilinea() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parse_();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parse_();
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c1) {
        s2 = peg$c1;
        peg$currPos += 2;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        if (peg$c3.test(input.charAt(peg$currPos))) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          if (peg$c3.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c4); }
          }
        }
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 10) {
            s4 = peg$c5;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c7();
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseHQL_Sentencia_CREATE_TABLE() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$parse_();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parse_();
    }
    if (s2 !== peg$FAILED) {
      if (input.substr(peg$currPos, 12) === peg$c8) {
        s3 = peg$c8;
        peg$currPos += 12;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s3 === peg$FAILED) {
        if (input.substr(peg$currPos, 12) === peg$c10) {
          s3 = peg$c10;
          peg$currPos += 12;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
      }
      if (s3 !== peg$FAILED) {
        s4 = [];
        s5 = peg$parse_();
        if (s5 !== peg$FAILED) {
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse_();
          }
        } else {
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          if (input.substr(peg$currPos, 14) === peg$c12) {
            s5 = peg$c12;
            peg$currPos += 14;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
          if (s5 === peg$FAILED) {
            if (input.substr(peg$currPos, 14) === peg$c14) {
              s5 = peg$c14;
              peg$currPos += 14;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c15); }
            }
          }
          if (s5 === peg$FAILED) {
            s5 = null;
          }
          if (s5 !== peg$FAILED) {
            s2 = [s2, s3, s4, s5];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseHQL_Id();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parse_();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parse_();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseHQL_Hiperdetalles_de_columna();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$currPos;
            s6 = [];
            s7 = peg$parse_();
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$parse_();
            }
            if (s6 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 40) {
                s7 = peg$c16;
                peg$currPos++;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c17); }
              }
              if (s7 !== peg$FAILED) {
                s8 = [];
                s9 = peg$parse_();
                while (s9 !== peg$FAILED) {
                  s8.push(s9);
                  s9 = peg$parse_();
                }
                if (s8 !== peg$FAILED) {
                  s6 = [s6, s7, s8];
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseHQL_Composicion_de_tabla();
              if (s6 !== peg$FAILED) {
                s7 = peg$currPos;
                s8 = [];
                s9 = peg$parse_();
                while (s9 !== peg$FAILED) {
                  s8.push(s9);
                  s9 = peg$parse_();
                }
                if (s8 !== peg$FAILED) {
                  if (input.substr(peg$currPos, 2) === peg$c18) {
                    s9 = peg$c18;
                    peg$currPos += 2;
                  } else {
                    s9 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c19); }
                  }
                  if (s9 !== peg$FAILED) {
                    s8 = [s8, s9];
                    s7 = s8;
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c20(s1, s2, s3, s4, s5, s6, s7);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseHQL_Composicion_de_tabla() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseHQL_Sentencia_CREATE_COLUMN_o_FOREIGN_KEY_o_PRIMARY_KEY_1();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseHQL_Sentencia_CREATE_COLUMN_o_FOREIGN_KEY_o_PRIMARY_KEY_n();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseHQL_Sentencia_CREATE_COLUMN_o_FOREIGN_KEY_o_PRIMARY_KEY_n();
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c21(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseHQL_Sentencia_CREATE_COLUMN_o_FOREIGN_KEY_o_PRIMARY_KEY_1() {
    var s0;

    s0 = peg$parseHQL_Sentencia_FOREIGN_KEY();
    if (s0 === peg$FAILED) {
      s0 = peg$parseHQL_Sentencia_CONSTRAINT_UNIQUE();
      if (s0 === peg$FAILED) {
        s0 = peg$parseHQL_Sentencia_CREATE_COLUMN();
        if (s0 === peg$FAILED) {
          s0 = peg$parseHQL_Sentencia_PRIMARY_KEY();
        }
      }
    }

    return s0;
  }

  function peg$parseHQL_Sentencia_CONSTRAINT_UNIQUE() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;
